# openssh-portable

./: addr.h  atomicio.h  auth.h  auth2.c  authfd.h  authfile.h  bitmap.h  canohost.h  channels.h  cipher.h  clientloop.c  clientloop.h  compat.h  dh.c  dh.h  digest.h  dispatch.h  dns.h  entropy.h  groupaccess.h  gss-serv.c  hostfile.h  kex.h  krl.h  libopenssh_defs.h  log.h  mac.h  match.h  misc.h  moduli.c  monitor_fdpass.h  msg.h  mux.c  openssh_autolink.h  packet.h  pal_doexec.h  platform.h  progressmeter.h  scp.c  sftp.c  (+21 more)
contrib/openssh/: CMakeLists.txt  esysdev_setup.props  libopenssh.props  putenv.c  putenv.h
contrib/openssh/esysmsvc/: autolink.h
contrib/win32/openssh/: Win32-OpenSSH.sln  config.h.vs  config.vcxproj  keygen.vcxproj  libopenssh.vcxproj  libopenssh.vcxproj.filters  paths.targets  paths_dll.targets  scp.vcxproj  sftp-server.vcxproj  sftp.vcxproj  ssh-add.vcxproj  ssh-agent.vcxproj  ssh-keyscan.vcxproj  ssh-shellhost.vcxproj  ssh-sk-helper.vcxproj  ssh.vcxproj  sshTelemetry.h  sshd.vcxproj  unittest-bitmap.vcxproj  unittest-hostkeys.vcxproj  unittest-kex.vcxproj  unittest-match.vcxproj  unittest-sshbuf.vcxproj  unittest-sshkey.vcxproj  unittest-win32compat.vcxproj  win32iocompat.vcxproj  win32iocompat.vcxproj.filters
contrib/win32/win32compat/: console.h  gss-sspi.c  misc_internal.h  misc_posix_compat.c  no-ops.c  pwd.c  signal.c  signal_internal.h  signal_sigalrm.c  socketio.c  w32-doexec.c  w32fd.c  w32fd.h  win32_sshpty.c  wmain_common.c
contrib/win32/win32compat/inc/: dirent.h  dlfcn.h  fcntl.h  gssapi.h  libgen.h  poll.h  pwd.h  signal.h  spawn.h  stdio.h  stdlib.h  string.h  unistd.h  utf.h
contrib/win32/win32compat/inc/sys/: ioctl.h  select.h  socket.h  stat.h  statvfs.h  time.h  wait.h
openbsd-compat/: bsd-misc.h  bsd-poll.c  bsd-signal.h  bsd-statvfs.c  bsd-statvfs.h  bsd-waitpid.h  fnmatch.h  getopt.h  glob.h  openbsd-compat.h  vis.h
regress/unittests/test_helper/: test_helper.c
